adding core mise apps and alias for git pull

--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -1,7 +1,10 @@
 [tools]
 chezmoi = "latest"
+btop = "latest"
 bat = "latest"
 lsd = "latest"
+ripgrep = "latest"
+fd = "latest"
 fzf = "latest"
 zoxide = "latest"
 neovim = "latest"
